<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/goToCart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/go_to_cart" />

    <item
        android:id="@+id/checkout"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/checkout" />

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/login"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/login" />
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>